--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Fórmula de Bhaskara</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Calculadora de Bhaskara</h1>
+    <section>
+<h1>Fórmula de Bhaskara</h1>
+<input type="number" id="a" placeholder="Insira o valor de a da equação">
+<input type="number" id="b" placeholder="Insira o valor de b da equação">
+<input type="number" id="c" placeholder="Insira o valor de c da equação">
+    </section>
+    <section>
+    
+    </section>
 </body>
 </html>
