--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <input type="number" id="a" placeholder="Insira o valor de a da equação">
 <input type="number" id="b" placeholder="Insira o valor de b da equação">
 <input type="number" id="c" placeholder="Insira o valor de c da equação">
+<button id="Calcular" onclick="calcular()">Calcular </button>
+<p>O valor de x1 é de: <span id="x1"></span></p>
+<p id="status"></p>
+<p>O valor de x2 é de: <span id="x2"></span></p>
+<p id="status"></p>
     </section>
     <section>
     
